--- a/hortulo/package.json
+++ b/hortulo/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@celo/contractkit": "^3.2.0",
-    "@celo/react-celo": "^5.0.3",
+    "connectkit": "^1.2.3",
+    "ethers": "^5.7.2",
     "react": "^18.2.0",
     "react-bulma-components": "^4.1.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "wagmi": "^0.12.13"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
