--- a/hortulo/package.json
+++ b/hortulo/package.json
@@ -16,6 +16,7 @@
     "react": "^18.2.0",
     "react-bulma-components": "^4.1.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.11.1",
     "wagmi": "^0.12.13"
   },
   "devDependencies": {
