--- a/hortulo/package.json
+++ b/hortulo/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@celo/contractkit": "^3.2.0",
+    "@masa-finance/masa-sdk": "^3.1.1",
     "connectkit": "^1.2.3",
     "ethers": "^5.7.2",
     "react": "^18.2.0",
@@ -27,7 +28,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
-    "vite": "^4.3.2",
+    "vite": "^4.3.9",
     "vite-plugin-node-polyfills": "^0.8.2"
   }
 }
